🔥fix/KIKI-73 : 스위치, 키캡, 하우징에서 유사 상품 리스트가 나오지 않는 문제 해결 - 같은 제조사 상품으로 추가 - 만약 그래도 없으면 카테고리 내 랜덤하게 채우도록 (6개)